# rusty_junctions

./: .gitignore  Cargo.toml  LICENSE  README.md
bag/src/: lib.rs
counter/src/: lib.rs
examples/: buffer.rs  collatz.rs  junction-macro.rs  macro-api.rs  mutex.rs  rendezvous.rs  santa-claus.rs  storage-cell.rs  taxi-cab.rs
examples/storage-cell/: Cargo.toml
examples/taxi-cab/: Cargo.toml
inverted-index/: Cargo.toml
inverted-index/src/: lib.rs
rusty-junctions-client-macro/: Cargo.toml
rusty-junctions-client-macro/rusty-junctions-client-proc-macro/: Cargo.toml
rusty-junctions-client-macro/rusty-junctions-client-proc-macro/src/: lib.rs  single_junction.rs
rusty-junctions-client-macro/src/: lib.rs
rusty-junctions-library-macro/: Cargo.toml
rusty-junctions-library-macro/rusty-junctions-utils/src/: lib.rs
rusty-junctions-library-macro/src/: join_pattern_derive.rs  library_generate.rs  partial_pattern_derive.rs  pattern_generation.rs
rusty-junctions-macro/: Cargo.toml
rusty-junctions-macro/client-api-macro/: Cargo.toml
rusty-junctions-macro/client-api-macro/src/: lib.rs
rusty-junctions-macro/client-api-proc-macro/: Cargo.toml
rusty-junctions-macro/client-api-proc-macro/src/: junction.rs  lib.rs  single_junction.rs
rusty-junctions-macro/library-generation-proc-macro/: Cargo.toml
rusty-junctions-macro/library-generation-proc-macro/src/: function_transform.rs  function_types.rs  join_pattern_derive.rs  lib.rs  library_generate.rs  module.rs  partial_pattern_derive.rs  pattern_generation.rs
rusty-junctions-macro/rusty-junctions-function-transformations/: Cargo.toml
rusty-junctions-macro/rusty-junctions-function-transformations/src/: lib.rs
rusty-junctions-macro/rusty-junctions-function-types/: Cargo.toml
rusty-junctions-macro/rusty-junctions-function-types/src/: lib.rs
rusty-junctions-macro/rusty-junctions-join-pattern-derive/: Cargo.toml
rusty-junctions-macro/rusty-junctions-join-pattern-derive/src/: lib.rs
rusty-junctions-macro/rusty-junctions-partial-pattern-derive/: Cargo.toml
rusty-junctions-macro/rusty-junctions-partial-pattern-derive/src/: channels.rs  lib.rs
rusty-junctions-macro/rusty-junctions-patterns-generate/: Cargo.toml
rusty-junctions-macro/rusty-junctions-patterns-generate/src/: lib.rs
rusty-junctions-macro/rusty-junctions-utils/: Cargo.toml
rusty-junctions-macro/rusty-junctions-utils/src/: lib.rs  module.rs
rusty-junctions-macro/src/: function_transform.rs  function_types.rs  join_pattern_derive.rs  lib.rs  partial_pattern_derive.rs  pattern_generation.rs
src/: bag.rs  channels.rs  controller.rs  counter.rs  function_transforms.rs  inverted_index.rs  join_pattern.rs  junction.rs  lib.rs  patterns.rs  types.rs
src/controller/: alive.rs  controller_handle.rs  fire.rs  handle.rs  handlers.rs  mod.rs
src/patterns/: binary.rs  mod.rs  ternary.rs  unary.rs
