[package]
name = "rusty-junctions"
version = "0.1.0"
authors = ["Sebastian Müksch <sebastian.mueksch@gmail.com>", "Kyle Cotton <kylecottonkc@gmail.com>"]
edition = "2018"
description = "Join Pattern implementation in Rust."
readme = "README.md"
repository = "https://github.com/smueksch/rusty_junctions"
license = "MIT"
keywords = ["join-pattern", "join-calculus", "concurrency"]
categories = ["concurrency"]

[dependencies]
bag = { path = "bag" }
inverted-index = { path = "inverted-index" }
counter = { path = "counter" }
rusty-junctions-macro = { path = "rusty-junctions-macro" }

itertools = "0.10.3"
[dev-dependencies]
rand = "0.7.3"
