[package]
name = "rusty-junctions-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty-junctions-utils = { path = "rusty-junctions-utils" }
rusty-junctions-patterns-generate = { path = "rusty-junctions-patterns-generate" }proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[lib]
proc-macro = true
