[package]
name = "rusty-junctions-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
client-api-proc-macro = { path = "client-api-proc-macro" }
client-api-macro = { path = "client-api-macro" }
library-generation-proc-macro = { path = "library-generation-proc-macro" }
